--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,8 +18,14 @@ spec:
         app: nginx
 
     spec:
+      nodeSelector:
+        size: mid
       containers:
       - name: nginxcontainers
         image: nginx:trixie-perl
         ports:
         - containerPort: 80
+      tolerations:
+      - key: "app"
+        value: "nginx"
+        effect: "NoSchedule"
