--- a/practice.yaml
+++ b/practice.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name: nginxd
+  name: de
   labels:
     app: nginx
 
@@ -23,23 +23,24 @@ spec:
         image: nginx:trixie-perl
         ports:
         - containerPort: 80
----
 
-apiVersion: v1
-kind: Service
+        env:
+        - name: name
+          valueFrom:
+            configMapKeyRef:
+              name: cm
+              key: name
 
-metadata:
-  name: nginxsvc
+      resources:
+        requests:
+          cpu: 1
+          memory: "1Gi"
 
-spec:
-  type: NodePort
-  selector:
-    app: nginx
+        limits:
+          cpu: 1
+          memory: "2Gi"
 
-  ports:
-  - targetPort: 80
-    port: 80
-    nodePort: 31000
----
-
-
+      tolerations:
+      - key: "app"
+        value: "nginx"
+        effect: "NoSchedule"
