--- a/pvc.yaml
+++ b/pvc.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mypvc
-
+  name: my-pvc
 spec:
-  storageClassName: yashv
   accessModes:
   - ReadWriteOnce
+  storageClassName: "" # 🔥 VERY IMPORTANT
   resources:
     requests:
       storage: 1Gi
