--- a/deployment.yaml
+++ b/deployment.yaml
@@ -62,3 +62,4 @@ spec:
       - name: nginx-storage
         persistentVolumeClaim:
           claimName: my-pvc # your PVC name
+      priorityClassName: high-priority
